1/4: Invite your friends done

--- a/course-info.yaml
+++ b/course-info.yaml
@@ -8,4 +8,5 @@ summary: Everyone likes eating out with friends. The more friends, the better, b
 programming_language: Python
 content:
 - Topics
+- Bill Splitter
 mode: Study
