--- a/Bill Splitter/The bill has arrived/task-info.yaml
+++ b/Bill Splitter/The bill has arrived/task-info.yaml
@@ -67,5 +67,8 @@ files:
         BillSplitterTest().run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/175/stages/902/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 06 Oct 2021 01:31:30 UTC
+record: 2
