--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,14 +3,14 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/517618/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Wed, 06 Oct 2021 00:11:33 UTC
+update_date: Wed, 06 Oct 2021 22:07:08 UTC
 stages:
 - id: 901
   step: 12898
   is_completed: true
 - id: 902
   step: 12899
-  is_completed: false
+  is_completed: true
 - id: 903
   step: 12900
   is_completed: false
