Loop control statements done

--- a/Topics/Loop control statements/lesson-info.yaml
+++ b/Topics/Loop control statements/lesson-info.yaml
@@ -4,3 +4,8 @@ content:
 - Count up the squares
 - Palindrome
 - Process integer input
+- The mean
+- Vowels and consonants
+- Party time
+- Game over
+- Prime number
