--- a/Bill Splitter/The Lucky One/task-info.yaml
+++ b/Bill Splitter/The Lucky One/task-info.yaml
@@ -55,28 +55,8 @@ files:
         BillSplitterTest().run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/175/stages/903/implement#comment
-status: Failed
+status: Solved
 feedback:
-  message: |-
-    Wrong answer in test #1
-
-    Your code is not printing expected number of lines of output, check examples
-
-    Please find below the output of your program during this failed test.
-    Note that the '>' character indicates the beginning of the input line.
-
-    ---
-
-    Enter the number of friends joining (including you):
-    > 5
-    Enter the name of every friend (including you), each on a new line:
-    > Marc
-    > Jem
-    > Monica
-    > Anna
-    > Jason
-    Enter the total bill value:
-    > 100
-    {'Marc': 20.0, 'Jem': 20.0, 'Monica': 20.0, 'Anna': 20.0, 'Jason': 20.0}
-  time: Wed, 06 Oct 2021 15:25:56 UTC
+  message: Congratulations!
+  time: Thu, 07 Oct 2021 21:11:16 UTC
 record: -1
