--- a/Bill Splitter/Party is over/task-info.yaml
+++ b/Bill Splitter/Party is over/task-info.yaml
@@ -93,5 +93,9 @@ files:
         BillSplitterTest().run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/175/stages/904/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Thu, 07 Oct 2021 23:07:26 UTC
 record: -1
